MDEV-10418 Assertion `m_extra_cache' failed in ha_partition::late_extra_cache(uint).

m_extra_prepare_for_update should be cleaned in
        ha_partition::reset()